<resources>
    <string name="app_name">VinylsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <string name="track_rating_placeholder">##</string>
    <string name="track_description_placeholder">Descripción del tracj</string>
    <string name="album_name_placeholder">Nombre del album</string>
    <string name="album_description_placeholder">Descripcion del album</string>
    <string name="txt_no_tracks">No hay tracks para este álbum</string>
    <string name="txt_catalog">   Catálogo</string>
    <string name="title_albums">Albums</string>
    <string name="title_musicians">   Artistas</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_tracks">Tracks del álbum</string>
    <string name="popularity"># popularidad</string>
    <string name="birthdate">Fecha de nacimiento:</string>
    <string name="biography">Biografía:</string>
    <string name="search">Buscar</string>
    <string name="generalIcon">generalIcon</string>
    <string name="create_album">Crear un álbum</string>
    <string name="album_name">Nombre</string>
    <string name="album_description">Descripción</string>
    <string name="album_genre">Género</string>
    <string name="album_release">Fecha de lanzamiento</string>
    <string name="save_album">Guardar Album</string>
    <string name="album_cover">URL portada</string>
    <string name="phone_number">Teléfono</string>
    <string name="email">Email:</string>
    <string name="name">Nombre:</string>
    <string name="btn_save_track">Botón para guardar Track</string>
    <string name="track_name">Nombre track</string>
    <string name="duration_track">Duración del track</string>
</resources>