<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="musician"
            type="com.example.frontvynils.models.Musician" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".ui.MusicianDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Imagen en la parte superior -->
                <ImageView
                    android:id="@+id/musician_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@{musician.description}"
                    android:scaleType="centerCrop" />

                <!-- Texto encima de la imagen, en la parte inferior izquierda -->
                <TextView
                    android:id="@+id/topLeftText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/musician_image"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{musician.name}"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <!-- Texto debajo de la imagen -->
                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/musician_image"
                    android:padding="8dp"
                    android:text="@string/popularity"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <!-- Texto "Fecha de nacimiento" -->
                <TextView
                    android:id="@+id/birthDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/descriptionText"
                    android:layout_marginTop="16dp"
                    android:text="@string/birthdate"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <!-- Texto "24 de enero" -->
                <TextView
                    android:id="@+id/birthDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/birthDateText"
                    android:layout_marginTop="8dp"
                    android:text="@{musician.birthDate}"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <!-- Texto "Biografía" -->
                <TextView
                    android:id="@+id/biographyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/birthDateValue"
                    android:layout_marginTop="36dp"
                    android:text="@string/biography"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/biographyData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/biographyText"
                    android:layout_marginTop="16dp"
                    android:text="@{musician.description}"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</layout>
