<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="collector"
            type="com.example.frontvynils.models.Collector" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".ui.MusicianDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Imagen en la parte superior -->
                <ImageView
                    android:id="@+id/collector_image1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/gray"
                    android:contentDescription="@{collector.name}"
                    android:scaleType="centerCrop" />

                <!-- Texto encima de la imagen, en la parte inferior izquierda -->
                <TextView
                    android:id="@+id/topLeftText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/collector_image1"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{collector.name}"
                    android:textColor="@android:color/black"
                    android:textSize="32sp" />

            </RelativeLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow>
                    <TextView
                        android:id="@+id/collectorTextName"
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/collectorName"
                        android:text="@{collector.name}"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/collectorTextEmail"
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/collectorEmail"
                        android:text="@{collector.email}"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/collectorTextPhone"
                        android:text="@string/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/collectorPhone"
                        android:text="@{collector.telephone}"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
